@@ -9,6 +9,7 @@
 * PaywayDotCom: update `live_url` [jcreiff] #4824
 * Stripe & Stripe PI: Update login key validation [almalee24] #4816
 * CheckoutV2: Parse the AVS and CVV checks more often [aenand] #4822
+* NMI: Add shipping_firstname, shipping_lastname, shipping_email, and surcharge fields [jcreiff] #4825
 
 == Version 1.131.0 (June 21, 2023)
 * Redsys: Add supported countries [jcreiff] #4811
